# Underflow

./: .gitignore  README.md
StackDB/: api.py  app.py  db.py  github_api.py  pyproject.toml  service_providers.csv  specific_services.csv
backend/: README.md  app.py  pyproject.toml
backend/src/: analyze_code.py
backend/src/underflow/: analyze_code.py  cli.py
backend/tests/: test_analyze_code.py
core/: README.md
core/tests/: test_analyze_code.py
core/underflow_cli_parent/: pyproject.toml
core/underflow_cli_parent/underflow_cli/: cli.py
core/underflow_sdk_parent/: pyproject.toml
core/underflow_sdk_parent/underflow/: pyvenv.cfg
core/underflow_sdk_parent/underflow-sdk/: pyvenv.cfg
core/underflow_sdk_parent/underflow_sdk/: analyze_code.py
data/: dataset_test.jsonl
frontend/my-app/: README.md  package-lock.json  package.json
frontend/my-app/app/: .page.tsx.swp  globals.css  layout.tsx  page.tsx
landing/: package-lock.json
landing/src/: LandingPage.jsx  LandingPage.module.css  global.css  index.css  index.js
landing/src/components/: FrameComponent.jsx  FrameComponent.module.css  FrameComponent1.jsx  FrameComponent1.module.css  FrameComponent2.jsx  FrameComponent2.module.css
restapi/: app.py
tests/: test_analyze_code.py
