[tool.poetry]
name = "stack_underflow_python"
version = "0.1.0"
description = "Development release"
authors = ["Laurence Liang <laurence@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"